Use Search instead of hand-rolled pipeline

--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -24,6 +24,7 @@
 else
 {
     <div class="container">
+        <p><i>Some images from <a href="https://xkcd.com/license.html">xkcd</a> under a <a href="http://creativecommons.org/licenses/by-nc/2.5/">CC BY-NC 2.5 license</a>.</i></p>
         <div class="row text-center text-lg-left">
             @foreach (var image in images)
             {
