--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 @implements IDisposable
 
-<h1>Azure SDK Demo - Memealyzer</h1>
+<h1>Memealyzer</h1>
 
 <EditForm OnValidSubmit="HandleFormSubmit" Model="@image">
     <DataAnnotationsValidator />
