--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -78,6 +78,7 @@ else
         hubConnection.On<Image>("ReceiveImage", (image) =>
         {
             int index = FindImageById(image.Id);
+            Console.WriteLine(index);
             if (index >= 0)
             {
                 images[index] = image;
