add meme stream

--- a/src/net/WebApp/wwwroot/css/app.css
+++ b/src/net/WebApp/wwwroot/css/app.css
@@ -187,5 +187,13 @@ app {
 }
 
 .border-8 {
-    border-width:8px !important;
+  border-width: 8px !important;
+}
+
+.btn-True {
+  color: #28a745;
+}
+
+.btn-False {
+  color: #cccccc;
 }
