--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -11,15 +11,21 @@
             <img src=imgs/logo.png height="94" width="773" alt="Memealyzer" style="margin-bottom: 10px;" class="img-fluid" />
         </div>
         <div class="col-12">
-            <EditForm OnValidSubmit="HandleAddFormSubmit" Model="@image">
-                <DataAnnotationsValidator />
-                <ValidationSummary />
-                <div class="form-row">
-                    <div class="col col-12">
-                        <button type="submit" value="submit" disabled="@(!IsConnected)" class="btn"><span class="oi oi-plus" title="Add Meme" aria-hidden="true"></span></button>
-                    </div>
+            <div class="form-row">
+                <div class="col col-6">
+                    <EditForm OnValidSubmit="HandleAddFormSubmit" Model="@image">
+                        <DataAnnotationsValidator />
+                        <ValidationSummary />
+                        <button type="submit" value="submit" disabled="@(!IsConnected)" class="btn shadow-none"><span style="font-size: 18px" class="oi oi-plus" title="Add Meme"
+                                aria-hidden="true"></span></button>
+                    </EditForm>
                 </div>
-            </EditForm>
+                <div class="col col-6">
+                    <button disabled="@(!IsConnected)" class="btn shadow-none btn-@streaming" @onclick="ToggleStream"><span style="font-size: 22px" class="oi oi-infinity" title="Meme Stream"
+                            aria-hidden="true"></span></button>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
@@ -58,8 +64,8 @@ else
                     </div>
                 </div>
             }
-            </div>
         </div>
+    </div>
 }
 
 @code {
@@ -67,6 +73,8 @@ else
     private Image image = new Image();
     private HubConnection hubConnection;
     private string borderStyle;
+    private bool streaming = false;
+    private Timer timer;
 
     protected override async Task OnInitializedAsync()
     {
@@ -100,9 +108,35 @@ else
 
     private async Task HandleAddFormSubmit()
     {
+        await PostImageAsync();
+    }
+
+    private async Task PostImageAsync()
+    {
         Image postedImage = new Image { Id = Guid.NewGuid().ToString() };
         postedImage = await ApiServiceClient.PostImage(postedImage);
         images.Insert(0, postedImage);
+    }
+
+    private void ToggleStream(MouseEventArgs e)
+    {
+        streaming = !streaming;
+        if (streaming)
+        {
+            timer = new Timer(async (object stateInfo) =>
+            {
+                await PostImageAsync();
+                StateHasChanged();
+            }, new AutoResetEvent(false), 0, 5000);
+        }
+        else
+        {
+            if (timer != null)
+            {
+                timer.Dispose();
+                timer = null;
+            }
+        }
     }
 
     public async Task DeleteImage(string id)
