finished bing search provider

--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -12,7 +12,7 @@
         </div>
         <div class="col-12">
             <div class="form-row">
-                <div class="col col-2">
+                <div class="col col-6">
                     <EditForm OnValidSubmit="HandleAddFormSubmit" Model="@image">
                         <DataAnnotationsValidator />
                         <ValidationSummary />
@@ -20,10 +20,7 @@
                                 aria-hidden="true"></span></button>
                     </EditForm>
                 </div>
-                <div class="col col-8">
-                    <input type="text" @bind-value="searchTerm"/>
-                </div>
-                <div class="col col-2">
+                <div class="col col-6">
                     <button disabled="@(!IsConnected)" class="btn shadow-none btn-@streaming" @onclick="ToggleStream" style="cursor:pointer"><span style="font-size: 22px" class="oi oi-infinity" title="Meme Stream"
                             aria-hidden="true"></span></button>
                 </div>
@@ -78,17 +75,14 @@ else
     private string borderStyle;
     private bool streaming = false;
     private Timer timer;
-    private string searchTerm;
 
     protected override async Task OnInitializedAsync()
     {
         borderStyle = await ApiServiceClient.GetBorderStyle();
         images = await ApiServiceClient.GetImages();
-        searchTerm = await ApiServiceClient.GetSearchTerm();
-
         hubConnection = FunctionsServiceClient.GetHubConnection();
 
-        hubConnection.On<Image>("ReceiveImage", async (image) =>
+        hubConnection.On<Image>("ReceiveImage", (image) =>
         {
             int index = FindImageById(image.Id);
             if (index >= 0)
@@ -100,7 +94,6 @@ else
                 images.Insert(0, image);
             }
 
-            searchTerm = await ApiServiceClient.GetSearchTerm();
             StateHasChanged();
         });
 
@@ -119,11 +112,7 @@ else
 
     private async Task PostImageAsync()
     {
-        Image postedImage = new Image 
-        { 
-            Id = Guid.NewGuid().ToString(),
-            SearchTerm = searchTerm
-        };
+        Image postedImage = new Image { Id = Guid.NewGuid().ToString() };
         
         try {
             postedImage = await ApiServiceClient.PostImage(postedImage);
