--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -49,16 +49,25 @@ else
         <div class="row text-center text-lg-left">
             @foreach (var image in images)
             {
-                <div class="col-md-4" @key="image">
-                    <div class="card" style="width: 100%;margin-bottom:5px;">
-                        <img class="card-img-top border border-8 border-@image.Color img-thumbnail" style="border-style: @borderStyle !important" src="@image.BlobUri" alt="">
+                <div class="col-md-4" @key="image" style="margin-bottom:5px;">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top border border-8 border-@image.Color img-thumbnail" style="border-style: @borderStyle !important" src="@image.BlobUri" alt="@image.Text" title="@image.Text">
                         <div class="card-body">
-                            <p class="card-text">@image.Text</p>
-                            <p class="card-text">@image.Status</p>
-                            <div class="text-right">
-                                <button type="submit" value="submit" disabled="@(String.IsNullOrEmpty(image.Sentiment))" class="btn"
-                                    @onclick="@(async () => await DeleteImage(image.Id))"><span style="font-size: 12px" class="oi oi-trash" title="Delete Meme"
-                                        aria-hidden="true"></span></button>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col text-left"><span style="display:inline-block;height:38px;width:42px;font-size:16px;padding:6px 12px;" class="oi oi-@(GetSentimentIcon(image)) text-@image.Color" title="Sentiment: @image.Sentiment"
+                                                aria-hidden="true"></span></div>
+                                    <div class="col">
+                                        @if( !image.Complete ){
+                                            <div class="d-flex justify-content-center" style="padding-top:8px;"><div class="spinner-border spinner-border-sm text-primary" role="status"><span class="sr-only">@image.Status</span></div></div>
+                                        }
+                                    </div>
+                                    <div class="col text-right">
+                                        <button type="submit" value="submit" class="btn" disabled="@(!image.Complete)"
+                                            @onclick="@(async () => await DeleteImage(image.Id))"><span style="font-size: 16px" class="oi oi-trash" title="Delete Meme"
+                                                aria-hidden="true"></span></button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -75,6 +84,23 @@ else
     private string borderStyle;
     private bool streaming = false;
     private Timer timer;
+
+    private string GetSentimentIcon(Image image) 
+    {
+        switch( image.Sentiment ){
+            case "Positive": 
+                return "check";
+            case "Negative": 
+                return "x";
+            case "Mixed":
+            case "Neutral": 
+                return "warning";
+            case "None":
+                return "ban";
+            default: 
+                return "ellipses";
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
