--- a/src/net/WebApp/Pages/Index.razor
+++ b/src/net/WebApp/Pages/Index.razor
@@ -51,7 +51,7 @@ else
             {
                 <div class="col-md-4" @key="image" style="margin-bottom:5px;">
                     <div class="card" style="width: 100%;">
-                        <img class="card-img-top border border-8 border-@image.Color img-thumbnail" style="border-style: @borderStyle !important" src="@image.BlobUri" alt="@image.Text" title="@image.Text">
+                        <a href="@image.Url" target="_blank"><img class="card-img-top border border-8 border-@image.Color img-thumbnail" style="border-style: @borderStyle !important" src="@image.BlobUri" alt="@image.Text" title="@image.Text"></a>
                         <div class="card-body">
                             <div class="container">
                                 <div class="row">
